--- a/charts/logging/promtail/values.yaml
+++ b/charts/logging/promtail/values.yaml
@@ -102,7 +102,7 @@ promtail:
           kubernetes_sd_configs:
           - role: pod
           pipeline_stages:
-            cri: {}
+          - cri: {}
           relabel_configs:
           - source_labels:
             - __meta_kubernetes_pod_label_name
@@ -145,7 +145,7 @@ promtail:
           kubernetes_sd_configs:
           - role: pod
           pipeline_stages:
-            cri: {}
+          - cri: {}
           relabel_configs:
           - action: drop
             regex: .+
@@ -192,7 +192,7 @@ promtail:
           kubernetes_sd_configs:
           - role: pod
           pipeline_stages:
-            cri: {}
+          - cri: {}
           relabel_configs:
           - action: drop
             regex: .+
@@ -245,7 +245,7 @@ promtail:
           kubernetes_sd_configs:
           - role: pod
           pipeline_stages:
-            cri: {}
+          - cri: {}
           relabel_configs:
           - action: drop
             regex: .+
@@ -300,7 +300,7 @@ promtail:
           kubernetes_sd_configs:
           - role: pod
           pipeline_stages:
-            cri: {}
+          - cri: {}
           relabel_configs:
           - action: drop
             regex: ''
