--- a/hack/ci/testdata/seed.yaml
+++ b/hack/ci/testdata/seed.yaml
@@ -67,11 +67,12 @@ spec:
       country: DE
       spec:
         vsphere:
-          cluster: Kubermatic
+          cluster: vcenter.dc.k8c.io
           datacenter: Hamburg
           datastore: ceph-vm
-          endpoint: https://vcenter.dc.k8c.io
-          root_path: /Hamburg/vm/Kubermatic-ci
+          endpoint: https://10.10.0.100
+          allowInsecure: true
+          rootPath: /Hamburg/vm/Kubermatic-ci
           templates:
             centos: kkp-centos-7
             flatcar: kkp-flatcar-3033.2.2
