--- a/addons/azure-cloud-node-manager/cloud-node-manager.yaml
+++ b/addons/azure-cloud-node-manager/cloud-node-manager.yaml
@@ -21,13 +21,16 @@
 {{ $version = "v1.0.19"}}
 {{ end }}
 {{ if eq .Cluster.MajorMinorVersion "1.22" }}
-{{ $version = "v1.1.15"}}
+{{ $version = "v1.1.23"}}
 {{ end }}
 {{ if eq .Cluster.MajorMinorVersion "1.23" }}
-{{ $version = "v1.23.12"}}
+{{ $version = "v1.23.20"}}
 {{ end }}
 {{ if eq .Cluster.MajorMinorVersion "1.24" }}
-{{ $version = "v1.24.0"}}
+{{ $version = "v1.24.7"}}
+{{ end }}
+{{ if eq .Cluster.MajorMinorVersion "1.25" }}
+{{ $version = "v1.25.1"}}
 {{ end }}
 {{ if not (eq $version "UNSUPPORTED") }}
 apiVersion: v1
