--- a/pkg/provider/cloud/kubevirt/manifests/preferences/sockets-advantage.yaml
+++ b/pkg/provider/cloud/kubevirt/manifests/preferences/sockets-advantage.yaml
@@ -15,7 +15,7 @@
 apiVersion: instancetype.kubevirt.io/v1alpha1
 kind: VirtualMachinePreference
 metadata:
-  name: kubermatic-standard
+  name: sockets-advantage
 spec:
   cpu:
     preferredCPUTopology: preferSockets
