--- a/pkg/provider/cloud/kubevirt/manifests/test/instancetypes/standard-1.yaml
+++ b/pkg/provider/cloud/kubevirt/manifests/test/instancetypes/standard-1.yaml
@@ -12,19 +12,12 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-apiVersion: kubevirt.io/v1
-kind: VirtualMachineInstancePreset
+apiVersion: instancetype.kubevirt.io/v1alpha1
+kind: VirtualMachineInstancetype
 metadata:
-  name: kubermatic-standard-2
+  name: standard-1
 spec:
-  domain:
-    resources:
-      limits:
-        cpu: "4"
-        memory: 16Gi
-      requests:
-        cpu: "4"
-        memory: 16Gi
-  selector:
-    matchLabels:
-      kubevirt.io/flavor: kubermatic-standard-2
+  cpu:
+    guest: 2
+  memory:
+    guest: 8Gi
