--- a/pkg/provider/cloud/kubevirt/manifests/test/preferences/invalid-standard.yaml
+++ b/pkg/provider/cloud/kubevirt/manifests/test/preferences/invalid-standard.yaml
@@ -12,19 +12,4 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-apiVersion: kubevirt.io/v1
-kind: VirtualMachineInstancePreset
-metadata:
-  name: kubermatic-standard-1
-spec:
-  domain:
-    resources:
-      limits:
-        cpu: "2"
-        memory: 8Gi
-      requests:
-        cpu: "2"
-        memory: 8Gi
-  selector:
-    matchLabels:
-      kubevirt.io/flavor: kubermatic-standard-1
+not a valid yaml file
