change select for lokiloader to app=k8c-events-lokiloader

--- a/charts/logging/promtail/values.yaml
+++ b/charts/logging/promtail/values.yaml
@@ -147,7 +147,7 @@ promtail:
           pipeline_stages:
           - cri: {}
           - match:
-              selector: '{app="events"}'
+              selector: '{app="k8c-events-lokiloader"}'
               stages:
                 - json:
                     expressions:
