Update versioning scheme to follow KKP's

--- a/charts/mla/consul/Chart.yaml
+++ b/charts/mla/consul/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: consul
-version: 0.36.0
+version: v9.9.9-dev
 appVersion: 1.10.3
 kubeVersion: ">=1.17.0-0"
 description: Official HashiCorp Consul Chart
