--- a/charts/mla/loki-distributed/Chart.yaml
+++ b/charts/mla/loki-distributed/Chart.yaml
@@ -11,7 +11,7 @@ sources:
 - https://grafana.com/oss/loki/
 - https://grafana.com/docs/loki/latest/
 type: application
-version: 0.39.0
+version: v9.9.9-dev
 dependencies:
   - name: loki-distributed
     version: 0.39.0
