--- a/charts/mla/minio/Chart.yaml
+++ b/charts/mla/minio/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
 description: High Performance, Kubernetes Native Object Storage
 name: minio
-version: 8.0.10
+version: v9.9.9-dev
 appVersion: master
 keywords:
 - storage
