add AWS CCM, fix lots of stuff, add tests

--- a/.prow/ccm-migrations.yaml
+++ b/.prow/ccm-migrations.yaml
@@ -129,3 +129,42 @@ presubmits:
               cpu: 3.5
             limits:
               memory: 6Gi
+
+  - name: pre-kubermatic-ccm-migration-aws-e2e
+    run_if_changed: "(addons/csi/aws-ebs|pkg/provider/cloud/aws/|pkg/resources/cloudcontroller/|pkg/test/e2e/ccm-migration/)"
+    decorate: true
+    clone_uri: "ssh://git@github.com/kubermatic/kubermatic.git"
+    labels:
+      preset-aws: "true"
+      preset-docker-pull: "true"
+      preset-docker-push: "true"
+      preset-vault: "true"
+      preset-repo-ssh: "true"
+      preset-e2e-ssh: "true"
+      preset-kind-volume-mounts: "true"
+      preset-kubeconfig-ci: "true"
+      preset-goproxy: "true"
+    spec:
+      containers:
+        - image: quay.io/kubermatic/build:go-1.19-node-18-kind-0.14-1
+          env:
+            - name: KUBERMATIC_EDITION
+              value: ee
+            - name: PROVIDER
+              value: aws
+            - name: SERVICE_ACCOUNT_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: e2e-ci
+                  key: serviceAccountSigningKey
+          command:
+            - ./hack/run-ccm-migration-e2e-test-in-kind.sh
+          # docker-in-docker needs privileged mode
+          securityContext:
+            privileged: true
+          resources:
+            requests:
+              memory: 4Gi
+              cpu: 3.5
+            limits:
+              memory: 6Gi
