temporarily disable unwanted tests

--- a/.prow/ccm-migrations.yaml
+++ b/.prow/ccm-migrations.yaml
@@ -13,122 +13,122 @@
 # limitations under the License.
 
 presubmits:
-  - name: pre-kubermatic-ccm-migration-openstack-e2e
-    run_if_changed: "(pkg/provider/cloud/openstack/|pkg/resources/cloudcontroller/|pkg/test/e2e/ccm-migration/|.prow/ccm-migrations.yaml)"
-    decorate: true
-    clone_uri: "ssh://git@github.com/kubermatic/kubermatic.git"
-    labels:
-      preset-openstack: "true"
-      preset-docker-pull: "true"
-      preset-docker-push: "true"
-      preset-vault: "true"
-      preset-repo-ssh: "true"
-      preset-e2e-ssh: "true"
-      preset-kind-volume-mounts: "true"
-      preset-kubeconfig-ci: "true"
-      preset-goproxy: "true"
-    spec:
-      containers:
-        - image: quay.io/kubermatic/build:go-1.19-node-18-kind-0.14-1
-          env:
-            - name: KUBERMATIC_EDITION
-              value: ee
-            - name: PROVIDER
-              value: openstack
-            - name: SERVICE_ACCOUNT_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: e2e-ci
-                  key: serviceAccountSigningKey
-          command:
-            - ./hack/run-ccm-migration-e2e-test-in-kind.sh
-          # docker-in-docker needs privileged mode
-          securityContext:
-            privileged: true
-          resources:
-            requests:
-              memory: 4Gi
-              cpu: 3.5
-            limits:
-              memory: 6Gi
+  # - name: pre-kubermatic-ccm-migration-openstack-e2e
+  #   run_if_changed: "(pkg/provider/cloud/openstack/|pkg/resources/cloudcontroller/|pkg/test/e2e/ccm-migration/|.prow/ccm-migrations.yaml)"
+  #   decorate: true
+  #   clone_uri: "ssh://git@github.com/kubermatic/kubermatic.git"
+  #   labels:
+  #     preset-openstack: "true"
+  #     preset-docker-pull: "true"
+  #     preset-docker-push: "true"
+  #     preset-vault: "true"
+  #     preset-repo-ssh: "true"
+  #     preset-e2e-ssh: "true"
+  #     preset-kind-volume-mounts: "true"
+  #     preset-kubeconfig-ci: "true"
+  #     preset-goproxy: "true"
+  #   spec:
+  #     containers:
+  #       - image: quay.io/kubermatic/build:go-1.19-node-18-kind-0.14-1
+  #         env:
+  #           - name: KUBERMATIC_EDITION
+  #             value: ee
+  #           - name: PROVIDER
+  #             value: openstack
+  #           - name: SERVICE_ACCOUNT_KEY
+  #             valueFrom:
+  #               secretKeyRef:
+  #                 name: e2e-ci
+  #                 key: serviceAccountSigningKey
+  #         command:
+  #           - ./hack/run-ccm-migration-e2e-test-in-kind.sh
+  #         # docker-in-docker needs privileged mode
+  #         securityContext:
+  #           privileged: true
+  #         resources:
+  #           requests:
+  #             memory: 4Gi
+  #             cpu: 3.5
+  #           limits:
+  #             memory: 6Gi
 
-  - name: pre-kubermatic-ccm-migration-vsphere-e2e
-    run_if_changed: "(pkg/provider/cloud/vsphere/|pkg/resources/cloudcontroller/|pkg/test/e2e/ccm-migration/|.prow/ccm-migrations.yaml)"
-    decorate: true
-    clone_uri: "ssh://git@github.com/kubermatic/kubermatic.git"
-    labels:
-      preset-vsphere: "true"
-      preset-docker-pull: "true"
-      preset-docker-push: "true"
-      preset-vault: "true"
-      preset-repo-ssh: "true"
-      preset-e2e-ssh: "true"
-      preset-kind-volume-mounts: "true"
-      preset-kubeconfig-ci: "true"
-      preset-goproxy: "true"
-    spec:
-      containers:
-        - image: quay.io/kubermatic/build:go-1.19-node-18-kind-0.14-1
-          env:
-            - name: KUBERMATIC_EDITION
-              value: ee
-            - name: PROVIDER
-              value: vsphere
-            - name: SERVICE_ACCOUNT_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: e2e-ci
-                  key: serviceAccountSigningKey
-          command:
-            - ./hack/run-ccm-migration-e2e-test-in-kind.sh
-          # docker-in-docker needs privileged mode
-          securityContext:
-            privileged: true
-          resources:
-            requests:
-              memory: 4Gi
-              cpu: 3.5
-            limits:
-              memory: 6Gi
+  # - name: pre-kubermatic-ccm-migration-vsphere-e2e
+  #   run_if_changed: "(pkg/provider/cloud/vsphere/|pkg/resources/cloudcontroller/|pkg/test/e2e/ccm-migration/|.prow/ccm-migrations.yaml)"
+  #   decorate: true
+  #   clone_uri: "ssh://git@github.com/kubermatic/kubermatic.git"
+  #   labels:
+  #     preset-vsphere: "true"
+  #     preset-docker-pull: "true"
+  #     preset-docker-push: "true"
+  #     preset-vault: "true"
+  #     preset-repo-ssh: "true"
+  #     preset-e2e-ssh: "true"
+  #     preset-kind-volume-mounts: "true"
+  #     preset-kubeconfig-ci: "true"
+  #     preset-goproxy: "true"
+  #   spec:
+  #     containers:
+  #       - image: quay.io/kubermatic/build:go-1.19-node-18-kind-0.14-1
+  #         env:
+  #           - name: KUBERMATIC_EDITION
+  #             value: ee
+  #           - name: PROVIDER
+  #             value: vsphere
+  #           - name: SERVICE_ACCOUNT_KEY
+  #             valueFrom:
+  #               secretKeyRef:
+  #                 name: e2e-ci
+  #                 key: serviceAccountSigningKey
+  #         command:
+  #           - ./hack/run-ccm-migration-e2e-test-in-kind.sh
+  #         # docker-in-docker needs privileged mode
+  #         securityContext:
+  #           privileged: true
+  #         resources:
+  #           requests:
+  #             memory: 4Gi
+  #             cpu: 3.5
+  #           limits:
+  #             memory: 6Gi
 
-  - name: pre-kubermatic-ccm-migration-azure-e2e
-    run_if_changed: "(addons/azure-cloud-node-manager/|pkg/provider/cloud/azure/|pkg/resources/cloudcontroller/|pkg/test/e2e/ccm-migration/|.prow/ccm-migrations.yaml)"
-    decorate: true
-    clone_uri: "ssh://git@github.com/kubermatic/kubermatic.git"
-    labels:
-      preset-azure: "true"
-      preset-docker-pull: "true"
-      preset-docker-push: "true"
-      preset-vault: "true"
-      preset-repo-ssh: "true"
-      preset-e2e-ssh: "true"
-      preset-kind-volume-mounts: "true"
-      preset-kubeconfig-ci: "true"
-      preset-goproxy: "true"
-    spec:
-      containers:
-        - image: quay.io/kubermatic/build:go-1.19-node-18-kind-0.14-1
-          env:
-            - name: KUBERMATIC_EDITION
-              value: ee
-            - name: PROVIDER
-              value: azure
-            - name: SERVICE_ACCOUNT_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: e2e-ci
-                  key: serviceAccountSigningKey
-          command:
-            - ./hack/run-ccm-migration-e2e-test-in-kind.sh
-          # docker-in-docker needs privileged mode
-          securityContext:
-            privileged: true
-          resources:
-            requests:
-              memory: 4Gi
-              cpu: 3.5
-            limits:
-              memory: 6Gi
+  # - name: pre-kubermatic-ccm-migration-azure-e2e
+  #   run_if_changed: "(addons/azure-cloud-node-manager/|pkg/provider/cloud/azure/|pkg/resources/cloudcontroller/|pkg/test/e2e/ccm-migration/|.prow/ccm-migrations.yaml)"
+  #   decorate: true
+  #   clone_uri: "ssh://git@github.com/kubermatic/kubermatic.git"
+  #   labels:
+  #     preset-azure: "true"
+  #     preset-docker-pull: "true"
+  #     preset-docker-push: "true"
+  #     preset-vault: "true"
+  #     preset-repo-ssh: "true"
+  #     preset-e2e-ssh: "true"
+  #     preset-kind-volume-mounts: "true"
+  #     preset-kubeconfig-ci: "true"
+  #     preset-goproxy: "true"
+  #   spec:
+  #     containers:
+  #       - image: quay.io/kubermatic/build:go-1.19-node-18-kind-0.14-1
+  #         env:
+  #           - name: KUBERMATIC_EDITION
+  #             value: ee
+  #           - name: PROVIDER
+  #             value: azure
+  #           - name: SERVICE_ACCOUNT_KEY
+  #             valueFrom:
+  #               secretKeyRef:
+  #                 name: e2e-ci
+  #                 key: serviceAccountSigningKey
+  #         command:
+  #           - ./hack/run-ccm-migration-e2e-test-in-kind.sh
+  #         # docker-in-docker needs privileged mode
+  #         securityContext:
+  #           privileged: true
+  #         resources:
+  #           requests:
+  #             memory: 4Gi
+  #             cpu: 3.5
+  #           limits:
+  #             memory: 6Gi
 
   - name: pre-kubermatic-ccm-migration-aws-e2e
     run_if_changed: "(addons/csi/aws-ebs|pkg/provider/cloud/aws/|pkg/resources/cloudcontroller/|pkg/test/e2e/ccm-migration/)"
