--- a/.prow/provider-aws.yaml
+++ b/.prow/provider-aws.yaml
@@ -13,49 +13,49 @@
 # limitations under the License.
 
 presubmits:
-  - name: pre-kubermatic-e2e-aws-ubuntu-1.22
-    decorate: true
-    run_if_changed: "(cmd/|codegen/|hack/|pkg/|charts/kubermatic|addons/|.prow/)"
-    clone_uri: "ssh://git@github.com/kubermatic/kubermatic.git"
-    labels:
-      preset-aws: "true"
-      preset-docker-mirror: "true"
-      preset-docker-pull: "true"
-      preset-docker-push: "true"
-      preset-vault: "true"
-      preset-repo-ssh: "true"
-      preset-e2e-ssh: "true"
-      preset-kubeconfig-ci: "true"
-      preset-kind-volume-mounts: "true"
-      preset-goproxy: "true"
-    spec:
-      containers:
-        - image: quay.io/kubermatic/build:go-1.19-node-18-kind-0.14-1
-          env:
-            - name: KUBERMATIC_EDITION
-              value: ee
-            - name: RELEASES_TO_TEST
-              value: "1.22"
-            - name: DISTRIBUTIONS
-              value: ubuntu
-            - name: SETUP_MODE
-              value: "kube"
-            - name: SERVICE_ACCOUNT_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: e2e-ci
-                  key: serviceAccountSigningKey
-          command:
-            - "./hack/ci/run-e2e-tests.sh"
-          # docker-in-docker needs privileged mode
-          securityContext:
-            privileged: true
-          resources:
-            requests:
-              memory: 4Gi
-              cpu: 3.5
-            limits:
-              memory: 6Gi
+  # - name: pre-kubermatic-e2e-aws-ubuntu-1.22
+  #   decorate: true
+  #   run_if_changed: "(cmd/|codegen/|hack/|pkg/|charts/kubermatic|addons/|.prow/)"
+  #   clone_uri: "ssh://git@github.com/kubermatic/kubermatic.git"
+  #   labels:
+  #     preset-aws: "true"
+  #     preset-docker-mirror: "true"
+  #     preset-docker-pull: "true"
+  #     preset-docker-push: "true"
+  #     preset-vault: "true"
+  #     preset-repo-ssh: "true"
+  #     preset-e2e-ssh: "true"
+  #     preset-kubeconfig-ci: "true"
+  #     preset-kind-volume-mounts: "true"
+  #     preset-goproxy: "true"
+  #   spec:
+  #     containers:
+  #       - image: quay.io/kubermatic/build:go-1.19-node-18-kind-0.14-1
+  #         env:
+  #           - name: KUBERMATIC_EDITION
+  #             value: ee
+  #           - name: RELEASES_TO_TEST
+  #             value: "1.22"
+  #           - name: DISTRIBUTIONS
+  #             value: ubuntu
+  #           - name: SETUP_MODE
+  #             value: "kube"
+  #           - name: SERVICE_ACCOUNT_KEY
+  #             valueFrom:
+  #               secretKeyRef:
+  #                 name: e2e-ci
+  #                 key: serviceAccountSigningKey
+  #         command:
+  #           - "./hack/ci/run-e2e-tests.sh"
+  #         # docker-in-docker needs privileged mode
+  #         securityContext:
+  #           privileged: true
+  #         resources:
+  #           requests:
+  #             memory: 4Gi
+  #             cpu: 3.5
+  #           limits:
+  #             memory: 6Gi
 
   - name: pre-kubermatic-e2e-aws-ubuntu-1.23
     decorate: true
@@ -146,51 +146,51 @@ presubmits:
               memory: 6Gi
 
 
-  - name: pre-kubermatic-e2e-aws-ubuntu-1.24-ce
-    decorate: true
-    run_if_changed: "(cmd/|codegen/|hack/|pkg/|charts/kubermatic|addons/|.prow/)"
-    clone_uri: "ssh://git@github.com/kubermatic/kubermatic.git"
-    labels:
-      preset-aws: "true"
-      preset-docker-mirror: "true"
-      preset-docker-pull: "true"
-      preset-docker-push: "true"
-      preset-vault: "true"
-      preset-repo-ssh: "true"
-      preset-e2e-ssh: "true"
-      preset-kubeconfig-ci: "true"
-      preset-kind-volume-mounts: "true"
-      preset-goproxy: "true"
-    spec:
-      containers:
-        - image: quay.io/kubermatic/build:go-1.19-node-18-kind-0.14-1
-          env:
-            - name: KUBERMATIC_EDITION
-              value: "ce"
-            - name: EXCLUDE_TESTS
-              value: "all"
-            - name: RELEASES_TO_TEST
-              value: "1.24"
-            - name: DISTRIBUTIONS
-              value: ubuntu
-            - name: SETUP_MODE
-              value: "kube"
-            - name: SERVICE_ACCOUNT_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: e2e-ci
-                  key: serviceAccountSigningKey
-          command:
-            - "./hack/ci/run-e2e-tests.sh"
-          # docker-in-docker needs privileged mode
-          securityContext:
-            privileged: true
-          resources:
-            requests:
-              memory: 4Gi
-              cpu: 3.5
-            limits:
-              memory: 6Gi
+  # - name: pre-kubermatic-e2e-aws-ubuntu-1.24-ce
+  #   decorate: true
+  #   run_if_changed: "(cmd/|codegen/|hack/|pkg/|charts/kubermatic|addons/|.prow/)"
+  #   clone_uri: "ssh://git@github.com/kubermatic/kubermatic.git"
+  #   labels:
+  #     preset-aws: "true"
+  #     preset-docker-mirror: "true"
+  #     preset-docker-pull: "true"
+  #     preset-docker-push: "true"
+  #     preset-vault: "true"
+  #     preset-repo-ssh: "true"
+  #     preset-e2e-ssh: "true"
+  #     preset-kubeconfig-ci: "true"
+  #     preset-kind-volume-mounts: "true"
+  #     preset-goproxy: "true"
+  #   spec:
+  #     containers:
+  #       - image: quay.io/kubermatic/build:go-1.19-node-18-kind-0.14-1
+  #         env:
+  #           - name: KUBERMATIC_EDITION
+  #             value: "ce"
+  #           - name: EXCLUDE_TESTS
+  #             value: "all"
+  #           - name: RELEASES_TO_TEST
+  #             value: "1.24"
+  #           - name: DISTRIBUTIONS
+  #             value: ubuntu
+  #           - name: SETUP_MODE
+  #             value: "kube"
+  #           - name: SERVICE_ACCOUNT_KEY
+  #             valueFrom:
+  #               secretKeyRef:
+  #                 name: e2e-ci
+  #                 key: serviceAccountSigningKey
+  #         command:
+  #           - "./hack/ci/run-e2e-tests.sh"
+  #         # docker-in-docker needs privileged mode
+  #         securityContext:
+  #           privileged: true
+  #         resources:
+  #           requests:
+  #             memory: 4Gi
+  #             cpu: 3.5
+  #           limits:
+  #             memory: 6Gi
 
   - name: pre-kubermatic-e2e-aws-ubuntu-1.24-api
     decorate: true
