--- a/pkg/resources/test/fixtures/deployment-aws-1.23.5-aws-cloud-controller-manager-externalCloudProvider.yaml
+++ b/pkg/resources/test/fixtures/deployment-aws-1.23.5-aws-cloud-controller-manager-externalCloudProvider.yaml
@@ -31,7 +31,7 @@ spec:
         - -timeout
         - "1"
         - -command
-        - '{"command":"/bin/aws-cloud-controller-manager","args":["--kubeconfig=/etc/kubernetes/kubeconfig/kubeconfig","--cloud-config=/etc/kubernetes/cloud/config","--cloud-provider=aws","--cluster-cidr=172.25.0.0/16"]}'
+        - '{"command":"/bin/aws-cloud-controller-manager","args":["--kubeconfig=/etc/kubernetes/kubeconfig/kubeconfig","--cloud-config=/etc/kubernetes/cloud/config","--cloud-provider=aws","--cluster-name=de-test-01","--cluster-cidr=172.25.0.0/16"]}'
         command:
         - /http-prober-bin/http-prober
         env:
