--- a/addons/Makefile
+++ b/addons/Makefile
@@ -56,6 +56,8 @@ aws-ebs-csi-driver:
 	cat csi/aws-ebs/_header.txt > $(OUTPUT_FILE)
 	helm --namespace kube-system template aws-ebs-csi-driver aws-ebs-csi-driver/aws-ebs-csi-driver \
 	  --set 'controller.k8sTagClusterId=\{{ .Cluster.Name }}' \
+	  --set 'node.securityContext.seccompProfile.type=RuntimeDefault' \
+	  --set 'controller.securityContext.seccompProfile.type=RuntimeDefault' \
 	  >> $(OUTPUT_FILE)
 	cat csi/aws-ebs/_footer.txt >> $(OUTPUT_FILE)
 	sed -i 's/public.ecr.aws/{{ Registry "public.ecr.aws" }}/g' $(OUTPUT_FILE)
