--- a/pkg/resources/test/fixtures/deployment-aws-1.23.5-machine-controller.yaml
+++ b/pkg/resources/test/fixtures/deployment-aws-1.23.5-machine-controller.yaml
@@ -74,7 +74,7 @@ spec:
               fieldPath: metadata.namespace
         - name: PROBER_KUBECONFIG
           value: /etc/kubernetes/kubeconfig/kubeconfig
-        image: quay.io/kubermatic/machine-controller:f405d185a750771118e20c9121c098abe04dc3fc
+        image: quay.io/kubermatic/machine-controller:v1.55.0
         livenessProbe:
           failureThreshold: 3
           httpGet:
