Support for setting default OperatingSystemProfiles at seed level
Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
@@ -327,6 +327,11 @@ spec:
                               - nodeSizeRequirements
                               - region
                             type: object
+                          operatingSystemProfiles:
+                            additionalProperties:
+                              type: string
+                            description: DefaultOperatingSystemProfiles specifies the OperatingSystemProfiles to use for each supported operating system.
+                            type: object
                           packet:
                             description: DatacenterSpecPacket describes a Packet datacenter.
                             properties:
