add mla-secrets values to example

--- a/charts/values.mla.yaml
+++ b/charts/values.mla.yaml
@@ -1,3 +1,31 @@
+# Copyright 2021 The Kubermatic Kubernetes Platform contributors.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
+mlaSecrets:
+  minio:
+    ## Set enabled to false if you want to re-use an existing secret for minio.
+    enabled: true
+    ## Set default accesskey, secretkey
+    ## AccessKey and secretKey is generated when not set
+    accessKey: "accesskey"
+    secretKey: "secretkey"
+  grafana:
+    ## Set enabled to false if you want to re-use an existing secret for grafana.
+    enabled: true
+    adminUser: admin
+    adminPassword: strongpassword
+
 iap:
   oidc_issuer_url: https://kkp.example.com/dex
   deployments:
